--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Erin Novoa
 description: My Coding Journey
-baseurl: "/my-portfolio" # the subpath of your site, e.g. /blog
+baseurl: "/jekyll-theme-minimal-resume" # the subpath of your site, e.g. /blog
 url: "localhost:4000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
 
 # User settings
